- finished Binary Image Library